src/test/java/testfiles/invalid/semanticErr/bitwise_operators/cannotBitwiseStrings.wacc
# evaluating or on strings should create semantic error

# Exit:
# 200

# Program:

begin
  int a = 1 ;
  string b = "Oopsie doodle" ;
  int c = a & b
end
